force-app/main/default/objects/Client_Intake__c/fields/DEF_Your_Relationship_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DEF_Your_Relationship_Other_Specify__c</fullName>
    <label>DEF: Your Relationship Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>