force-app/main/default/objects/Client_Intake__c/fields/DEF_Your_Relationship_To_Maker__c.field-meta.xml
<CustomField>
    <fullName>DEF_Your_Relationship_To_Maker__c</fullName>
    <label>DEF: Your Relationship with...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal relationship</fullName>
            </value>
            <value>
                <fullName>Professional relationship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>