force-app/main/default/objects/Client_Intake__c/fields/DV_Abuse_Type_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuse_Type_Other_Specify__c</fullName>
    <label>DV: Abuse Type Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>