force-app/main/default/objects/Client_Intake__c/fields/DV_Abuser_Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Contact_Frequency__c</fullName>
    <label>DV: Abuser Contact Frequency (If Not...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>