force-app/main/default/objects/Client_Intake__c/fields/DV_Abuser_Threat_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Threat_Details__c</fullName>
    <label>DV: Abuser Threat Details</label>
    <type>TextArea</type>
</CustomField>