force-app/main/default/objects/Client_Intake__c/fields/DV_Abuser_Weapon_Situation__c.field-meta.xml
<CustomField>
    <fullName>DV_Abuser_Weapon_Situation__c</fullName>
    <label>DV: Abuser Weapon Situation Description</label>
    <type>TextArea</type>
</CustomField>