force-app/main/default/objects/Client_Intake__c/fields/DV_Children_Witness_Abuse_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Children_Witness_Abuse_Details__c</fullName>
    <label>DV: Children Witness/Affected by...</label>
    <type>TextArea</type>
</CustomField>