force-app/main/default/objects/Client_Intake__c/fields/DV_Contacted_Law_Enforcement__c.field-meta.xml
<CustomField>
    <fullName>DV_Contacted_Law_Enforcement__c</fullName>
    <label>DV: Contacted Law Enforcement/Filed...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>