force-app/main/default/objects/Client_Intake__c/fields/DV_Criminal_Case_Details__c.field-meta.xml
<CustomField>
    <fullName>DV_Criminal_Case_Details__c</fullName>
    <label>DV: Criminal Case Details (Related...</label>
    <type>TextArea</type>
</CustomField>