force-app/main/default/objects/Client_Intake__c/fields/DV_Firearm_Types__c.field-meta.xml
<CustomField>
    <fullName>DV_Firearm_Types__c</fullName>
    <label>DV: Firearm/Weapon Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>