force-app/main/default/objects/Client_Intake__c/fields/DV_Firearms_Present__c.field-meta.xml
<CustomField>
    <fullName>DV_Firearms_Present__c</fullName>
    <label>DV: Firearms/Weapons in Home or with...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>