force-app/main/default/objects/Client_Intake__c/fields/DV_Injury_Details_Medical_Attention__c.field-meta.xml
<CustomField>
    <fullName>DV_Injury_Details_Medical_Attention__c</fullName>
    <label>DV: Injury Details &amp; Medical Attention</label>
    <type>TextArea</type>
</CustomField>