force-app/main/default/objects/Client_Intake__c/fields/DV_Law_Enforcement_Outcome__c.field-meta.xml
<CustomField>
    <fullName>DV_Law_Enforcement_Outcome__c</fullName>
    <label>DV: Law Enforcement Outcome (Case #)</label>
    <type>TextArea</type>
</CustomField>