force-app/main/default/objects/Client_Intake__c/fields/DV_Ongoing_Violence_Situation__c.field-meta.xml
<CustomField>
    <fullName>DV_Ongoing_Violence_Situation__c</fullName>
    <label>DV: Ongoing Violence Situation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>