force-app/main/default/objects/Client_Intake__c/fields/DV_Perpetrator_Family_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Perpetrator_Family_Specify__c</fullName>
    <label>DV: Perpetrator Family Member...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>