force-app/main/default/objects/Client_Intake__c/fields/DV_Perpetrator_Identity__c.field-meta.xml
<CustomField>
    <fullName>DV_Perpetrator_Identity__c</fullName>
    <label>DV: Person Responsible for Abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current spouse/partner</fullName>
            </value>
            <value>
                <fullName>Former spouse/partner</fullName>
            </value>
            <value>
                <fullName>Family member</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>