force-app/main/default/objects/Client_Intake__c/fields/DV_Perpetrator_Identity_Other__c.field-meta.xml
<CustomField>
    <fullName>DV_Perpetrator_Identity_Other__c</fullName>
    <label>DV: Perpetrator Identity Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>