force-app/main/default/objects/Client_Intake__c/fields/DV_Receiving_Support_Services__c.field-meta.xml
<CustomField>
    <fullName>DV_Receiving_Support_Services__c</fullName>
    <label>DV: Receiving Support Services...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic violence shelter</fullName>
            </value>
            <value>
                <fullName>Therapy or counseling</fullName>
            </value>
            <value>
                <fullName>Legal aid services</fullName>
            </value>
            <value>
                <fullName>Medical treatment or health services</fullName>
            </value>
            <value>
                <fullName>Child protection services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>