force-app/main/default/objects/Client_Intake__c/fields/DV_Recent_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>DV_Recent_Incident_Date__c</fullName>
    <label>DV: Recent Incident Date</label>
    <type>Date</type>
</CustomField>