force-app/main/default/objects/Client_Intake__c/fields/DV_Recent_Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>DV_Recent_Incident_Description__c</fullName>
    <label>DV: Recent Incident Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>