force-app/main/default/objects/Client_Intake__c/fields/DV_Recent_Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>DV_Recent_Incident_Location__c</fullName>
    <label>DV: Recent Incident Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>