force-app/main/default/objects/Client_Intake__c/fields/DV_Rel_To_Perpetrator_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>DV_Rel_To_Perpetrator_Other_Specify__c</fullName>
    <label>DV: Relationship to Perpetrator...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>