force-app/main/default/objects/Client_Intake__c/fields/DV_Safe_Place_To_Stay__c.field-meta.xml
<CustomField>
    <fullName>DV_Safe_Place_To_Stay__c</fullName>
    <label>DV: Have Safe Place to Stay Now?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>