force-app/main/default/objects/Client_Intake__c/fields/DV_Sought_Protection_Order__c.field-meta.xml
<CustomField>
    <fullName>DV_Sought_Protection_Order__c</fullName>
    <label>DV: Sought Protection/Restraining Order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>