force-app/main/default/objects/Client_Intake__c/fields/DV_Support_Services_Other__c.field-meta.xml
<CustomField>
    <fullName>DV_Support_Services_Other__c</fullName>
    <label>DV: Support Services Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>