force-app/main/default/objects/Client_Intake__c/fields/DV_Types_Of_Abuse__c.field-meta.xml
<CustomField>
    <fullName>DV_Types_Of_Abuse__c</fullName>
    <label>DV: Types of Abuse Experienced...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical abuse</fullName>
            </value>
            <value>
                <fullName>Emotional or psychological abuse</fullName>
            </value>
            <value>
                <fullName>Verbal abuse</fullName>
            </value>
            <value>
                <fullName>Sexual abuse or assault</fullName>
            </value>
            <value>
                <fullName>Financial abuse</fullName>
            </value>
            <value>
                <fullName>Stalking or harassment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>