force-app/main/default/objects/Client_Intake__c/fields/DV_Violence_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DV_Violence_Frequency__c</fullName>
    <label>DV: Violence Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>