force-app/main/default/objects/Client_Intake__c/fields/DV_Violence_Past_Or_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>DV_Violence_Past_Or_Ongoing__c</fullName>
    <label>DV: Violence Past or Ongoing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Past</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>