force-app/main/default/objects/Client_Intake__c/fields/EMPL_Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>EMPL_Desired_Outcome__c</fullName>
    <label>EMPL: Outcome/Resolution Seeking for...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensation for Lost Wages</fullName>
            </value>
            <value>
                <fullName>Reinstatement of Position</fullName>
            </value>
            <value>
                <fullName>Policy Change at the Workplace</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>