force-app/main/default/objects/Client_Intake__c/fields/EMPL_Desired_Outcome_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>EMPL_Desired_Outcome_Other_Specify__c</fullName>
    <label>EMPL: Desired Outcome Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>