force-app/main/default/objects/Client_Intake__c/fields/EMPL_Employment_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>EMPL_Employment_Issue_Type__c</fullName>
    <label>EMPL: Type of Employment Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wrongful Termination</fullName>
            </value>
            <value>
                <fullName>Discrimination</fullName>
            </value>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Retaliation</fullName>
            </value>
            <value>
                <fullName>Wage/Hour Violations</fullName>
            </value>
            <value>
                <fullName>FMLA Violations</fullName>
            </value>
            <value>
                <fullName>Unsafe Work Conditions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>