force-app/main/default/objects/Client_Intake__c/fields/EMPL_Issue_Stage__c.field-meta.xml
<CustomField>
    <fullName>EMPL_Issue_Stage__c</fullName>
    <label>EMPL: Stage of Employment Issue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informal Complaint</fullName>
            </value>
            <value>
                <fullName>Formal Complaint Filed</fullName>
            </value>
            <value>
                <fullName>Negotiations or Settlement Discussions</fullName>
            </value>
            <value>
                <fullName>Lawsuit Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>