force-app/main/default/objects/Client_Intake__c/fields/EP_Documents_Needed__c.field-meta.xml
<CustomField>
    <fullName>EP_Documents_Needed__c</fullName>
    <label>EP: Documents Needed for Estate Plan...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>