force-app/main/default/objects/Client_Intake__c/fields/EP_Documents_Needed_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>EP_Documents_Needed_Other_Specify__c</fullName>
    <label>EP: Estate Plan Documents Needed...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>