force-app/main/default/objects/Client_Intake__c/fields/EP_Plan_For_Whom__c.field-meta.xml
<CustomField>
    <fullName>EP_Plan_For_Whom__c</fullName>
    <label>EP: Estate Plan For You or Someone Else?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>