force-app/main/default/objects/Client_Intake__c/fields/EP_Previous_Estate_Plan__c.field-meta.xml
<CustomField>
    <fullName>EP_Previous_Estate_Plan__c</fullName>
    <label>EP: Created Estate Plan Previously?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>