force-app/main/default/objects/Client_Intake__c/fields/FL_Child_Safety_Concerns__c.field-meta.xml
<CustomField>
    <fullName>FL_Child_Safety_Concerns__c</fullName>
    <label>FL: Concerns About Child(ren)&apos;s...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>