force-app/main/default/objects/Client_Intake__c/fields/FL_Children_Details__c.field-meta.xml
<CustomField>
    <fullName>FL_Children_Details__c</fullName>
    <label>FL: Children Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>