force-app/main/default/objects/Client_Intake__c/fields/FL_Currently_Married__c.field-meta.xml
<CustomField>
    <fullName>FL_Currently_Married__c</fullName>
    <label>FL: Currently Married?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>