force-app/main/default/objects/Client_Intake__c/fields/FL_Divorce_Property_Division__c.field-meta.xml
<CustomField>
    <fullName>FL_Divorce_Property_Division__c</fullName>
    <label>FL: Divorce Involve Property Division?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>