force-app/main/default/objects/Client_Intake__c/fields/FL_Marriage_Date__c.field-meta.xml
<CustomField>
    <fullName>FL_Marriage_Date__c</fullName>
    <label>FL: Marriage Date</label>
    <type>Date</type>
</CustomField>