force-app/main/default/objects/Client_Intake__c/fields/FL_Marriage_Location__c.field-meta.xml
<CustomField>
    <fullName>FL_Marriage_Location__c</fullName>
    <label>FL: Marriage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>