force-app/main/default/objects/Client_Intake__c/fields/FL_Marriage_Type__c.field-meta.xml
<CustomField>
    <fullName>FL_Marriage_Type__c</fullName>
    <label>FL: Type of Marriage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>Common Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>