force-app/main/default/objects/Client_Intake__c/fields/FL_Previously_Filed_Family_Case__c.field-meta.xml
<CustomField>
    <fullName>FL_Previously_Filed_Family_Case__c</fullName>
    <label>FL: Previously Filed Family Law Case?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>