force-app/main/default/objects/Client_Intake__c/fields/FL_Property_Division_Bank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Bank_Accounts__c</fullName>
    <label>FL: Property Division - Bank Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>