force-app/main/default/objects/Client_Intake__c/fields/FL_Property_Division_Other_Assets__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Other_Assets__c</fullName>
    <label>FL: Property Division - Other Assets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>