force-app/main/default/objects/Client_Intake__c/fields/FL_Property_Division_Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>FL_Property_Division_Real_Estate__c</fullName>
    <label>FL: Property Division - Real Estate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>