force-app/main/default/objects/Client_Intake__c/fields/FL_Seeking_Action__c.field-meta.xml
<CustomField>
    <fullName>FL_Seeking_Action__c</fullName>
    <label>FL: Seeking Divorce or Legal Separation?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Legal Separation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>