force-app/main/default/objects/Client_Intake__c/fields/FL_Spouse_Children_Together__c.field-meta.xml
<CustomField>
    <fullName>FL_Spouse_Children_Together__c</fullName>
    <label>FL: Spouse and You Have Children...</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>