force-app/main/default/objects/Client_Intake__c/fields/GC_Assistance_Needed_Other_Specify__c.field-meta.xml
<CustomField>
    <fullName>GC_Assistance_Needed_Other_Specify__c</fullName>
    <label>GC: Assistance Needed Other (Specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>