force-app/main/default/objects/Client_Intake__c/fields/GC_Assistance_Needed_Types__c.field-meta.xml
<CustomField>
    <fullName>GC_Assistance_Needed_Types__c</fullName>
    <label>GC: Need Assistance With (Check all)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petition for Guardianship</fullName>
            </value>
            <value>
                <fullName>Petition for Conservatorship</fullName>
            </value>
            <value>
                <fullName>Emergency Guardianship/Conservatorship</fullName>
            </value>
            <value>
                <fullName>Petition to Transfer Guardianship/Conservatorship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>