force-app/main/default/objects/Client_Intake__c/fields/GC_Existing_Proceedings_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>GC_Existing_Proceedings_Case_Number__c</fullName>
    <label>GC: Existing Proceedings Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>