force-app/main/default/objects/Client_Intake__c/fields/GC_Existing_Proceedings_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>GC_Existing_Proceedings_Jurisdiction__c</fullName>
    <label>GC: Existing Proceedings...</label>
    <length>255</length>
    <type>Text</type>
</CustomField>